grid-shared-mixins.scss
//switches IE (and other non-flexbox friendly browsers) to using float mode
@mixin ieFloat {
	.no-flexwrap & {
		display: block;
		&:after {
			content: '';
			display: block;
			clear: both;
		}
		& > * {
			float: left;
			display: block;
		}
	}
}

//Generates the grid cell gutters
@mixin generate-gutters ($format, $gutter, $outerGutters: false){
	margin: -$gutter;
	border-width: 0 $gutter $gutter 0;
	> * {
		border-width: $gutter 0 0 $gutter;
	}

	.lt-ie9 & {
		border-right-width: 0;
		&, > * {
			border-color: $grid-gutter-ie-fallback;
		}
	}

	@if ($format == 'classes'){
		//only apply the outer horizontal gutters if the screen size is smaller than the page width + gutter size
		&.#{$fullPrefix}grid--outerGutters {
			@include mq(max, ($grid-page-width + ($gutter * 2))){
				&-h-delayed {
					margin-left: 0;
					margin-right: 0;
				}
				&-left-delayed {
					margin-left: 0;
				}
				&-right-delayed {
					margin-right: 0;
				}

				.lt-ie9 & {
					&-h-delayed, &-left-delayed, &-right-delayed {
						margin-left: -$gutter;
					}
				}
			}

			.lt-ie9 & {
				&, &-h {
					border-right-width: $gutter !important;
				}
			}
		}

	} @else if ($format == 'mixin') {
		//only apply the outer horizontal gutters if the screen size is smaller than the page width + gutter size
		@if($outerGutters){
			@include mq(max, ($grid-page-width + ($gutter * 2))){
				@if($outerGutters == 'h-delayed'){
					margin-left: 0;
					margin-right: 0;
				} @else if ($outerGutters == 'left-delayed'){
					margin-left: 0;
				} @else if ($outerGutters == 'right-delayed'){
					margin-right: 0;
				}
			}

			.lt-ie9 & {
				@if (
					$outerGutters == 'h-delayed' or
					$outerGutters == 'left-delayed' or
					$outerGutters == 'right-delayed'
				){
					margin-left: -$gutter;
				}

				@if ($outerGutters == true or $outerGutters == 'h'){
					border-right-width: $gutter !important;
				}
			}
		}
	}
}

